正規表現を編集

--- a/001_str.ipynb
+++ b/001_str.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -816,6 +816,103 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#################################################\n",
+    "# 文字コード・Unicode\n",
+    "#################################################"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "café\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Unicode\n",
+    "# =====================\n",
+    "# python3の文字列はUnicodeで定義されている\n",
+    "# Unicodeは「\\u」の後に4-8桁の16進数を続けて表現する\n",
+    "# 余談だが、len()はバイト数ではなく、Unicodeの文字数を数える\n",
+    "print(\"\\u0063\\u0061\\u0066\\u00e9\")\n",
+    "print(len(\"\\u0063\\u0061\\u0066\\u00e9\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LATIN SMALL LETTER E WITH ACUTE\n",
+      "LATIN SMALL LETTER A\n",
+      "HIRAGANA LETTER GA\n"
+     ]
+    }
+   ],
+   "source": [
+    "# unicodedata.name(str)\n",
+    "# text : Unicode文字を与えるとその文字のUnicode名を返す\n",
+    "# param : str - Unicode文字(str)※1文字のみ\n",
+    "# return : 与えられた文字のUnicode名(str)\n",
+    "import unicodedata\n",
+    "print(unicodedata.name(\"\\u00e9\"))\n",
+    "print(unicodedata.name(\"a\"))\n",
+    "print(unicodedata.name(\"が\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "é\n",
+      "が\n",
+      "あ\n"
+     ]
+    }
+   ],
+   "source": [
+    "# unicodedata.lookup(str)\n",
+    "# text : Unicode名を与えると、Unicode文字を返す\n",
+    "# param : str - Unicode名(str)\n",
+    "# return : Unicode文字(str)\n",
+    "import unicodedata\n",
+    "print(unicodedata.lookup(\"LATIN SMALL LETTER E WITH ACUTE\"))\n",
+    "print(unicodedata.lookup(\"hiragana letter ga\"))\n",
+    "\n",
+    "# \\N{name}の形式でもUnicode名をUnicode文字に変換することは可能\n",
+    "print(\"\\N{hiragana letter a}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 47,
    "metadata": {
     "collapsed": false
@@ -843,7 +940,7 @@
     }
    ],
    "source": [
-    "# 文字列を指定したエンコード形式に変換する\n",
+    "# 文字列を指定したエンコード方式でバイト列に変換する(文字列 >> バイト列)\n",
     "# errorでは変換できない文字列があった場合の対処を記述。strict=エラーを出力、ignore=対象の文字を無視する、replace=?に置き換える\n",
     "# encode(encoding=\"utf8\", errors=\"strict)\n",
     "print(\"こんにちは\".encode(\"utf8\"))\n",
@@ -854,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -863,12 +960,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "こんにちは\n"
+      "こんにちは\n",
+      "縺薙ｓ縺ｫ縺｡縺ｯ\n",
+      "world\n"
      ]
     }
    ],
    "source": [
-    "print(b'\\xe3\\x81\\x93\\xe3\\x82\\x93\\xe3\\x81\\xab\\xe3\\x81\\xa1\\xe3\\x81\\xaf'.decode(\"utf8\"))"
+    "# バイト列を指定したエンコード方式で文字列に変換する(バイト列 >> 文字列)\n",
+    "print(b'\\xe3\\x81\\x93\\xe3\\x82\\x93\\xe3\\x81\\xab\\xe3\\x81\\xa1\\xe3\\x81\\xaf'.decode(\"utf8\"))\n",
+    "print(b'\\xe3\\x81\\x93\\xe3\\x82\\x93\\xe3\\x81\\xab\\xe3\\x81\\xa1\\xe3\\x81\\xaf'.decode(\"sjis\"))\n",
+    "print(b\"world\".decode(\"ascii\"))"
    ]
   },
   {
