--- a/005_re.ipynb
+++ b/005_re.ipynb
@@ -1,36 +1,57 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 特殊文字\n",
+    "|パターン|マッチ対象|\n",
+    "|:--|:--|\n",
+    "|\\\\d|1個の数字|\n",
+    "|\\\\D|1個の数字以外の文字|\n",
+    "|\\\\w|1個の英字|\n",
+    "|\\\\W|1個の英字以外の文字|\n",
+    "|\\\\s|1個の空白文字|\n",
+    "|\\\\S|1個の空白文字以外の文字|\n",
+    "|\\\\b|単語の境界(\\\\wと\\\\Wの間。順番はどちらでも良い)|\n",
+    "|\\\\B|単語の境界以外の文字間|\n",
+    "\n",
+    "## メタ文字\n",
+    "- . : とにかく何でもいい一文字(\"a.c\" >> \"abc\")\n",
+    "- ^ : 行の先頭(\"^Hello\" >> \"Hello World\")\n",
+    "- \\$ : 行の末尾(\"World$\" >> \"Hello World\")\n",
+    "- \\* : 直前の文字が0個以上連続する(\"hel*o\" >> \"hello\", \"heo\", \"helllllo\")\n",
+    "- \\+ : 直前の文字が1個以上連続する(\"hel+o\" >> \"hello\", \"helllllo\", \"helo\")\n",
+    "- ? : 直前の文字が0個か1個ある(\"Windows?\" >> \"Windows\", \"Window\")\n",
+    "- {n} : 直前の文字がn個連続する(\"a{3}\" >> \"aaa\")\n",
+    "- {n, m} : 直前の文字がn個以上m個未満連続する(\"a{1, 3}\" >> \"a\", \"aa\"\n",
+    "- A | B : AかBいずれかの文字(\"Windows|Mac\" >> \"Windows\", \"Mac\")\n",
+    "- []  : 指定した文字のどれか(\"R[AU]N\" >> \"RUN\", \"RAN\") ※次のような書き方もある[A-Z], [0-9]\n",
+    "- [^] : 指定した文字以外(\"R[^B-Z]N\" >> \"RAN\")\n",
+    "- () : グループ化(\"(Hey!)+\" >>  \"Hey!\", \"Hey!Hey!\", \"Hey!Hey!Hey!\")\n",
+    "- prev(?= next) : nextが続いているprev(\"hello (?= world)\" >> \"hello\")\n",
+    "- prev(?! next) : nextが続いていないprev\n",
+    "- (?<= prev)next : prevが前にあるnext\n",
+    "- (?<! prev)next : prevが前にないnext\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "#########################################################\n",
-    "# 正規表現基本的な関数\n",
+    "# 正規表現基本的なメソッド\n",
     "#########################################################\n",
-    "\"\"\"\n",
-    "正規表現\n",
-    ". とにかく何でもいい一文字(\"a.c\" >> \"abc\")\n",
-    "^ 行の先頭にのみ存在する文字列を検索(\"^Hello\" >> \"Hello World\")\n",
-    "$ 行の末尾にのみ存在する文字列を検索(\"World$\" >> \"Hello World\")\n",
-    "* 直前の文字が0個以上連続する(\"hel*o\" >> \"hello\", \"heo\", \"helllllo\")\n",
-    "+ 直前の文字が1個以上連続する(\"hel+o\" >> \"hello\", \"helllllo\", \"helo\")\n",
-    "? 直前の文字が0個か1個ある(\"Windows?\" >> \"Windows\", \"Window\")\n",
-    "| いずれかの文字(\"Windows|Mac\" >> \"Windows\", \"Mac\")\n",
-    "[] 指定した文字のどれか(\"R[AU]N\" >> \"RUN\", \"RAN\") @[A-Z], [0-9]\n",
-    "() グループ化(\"(Hey!)+\" >>  \"Hey!\", \"Hey!Hey!\", \"Hey!Hey!Hey!\")\n",
-    "\\w 英単語を表す(\"w\\\" >> \"word\")\n",
-    "\\d 数字を表す(\"(\\d+)-(\\d+)-(\\d+)\" >> \"080-7777-6666\")\n",
-    "\"\"\"\n",
     "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -40,7 +61,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<_sre.SRE_Match object; span=(0, 3), match='adc'>\n",
       "<_sre.SRE_Match object; span=(4, 7), match='abc'>\n",
       "None\n"
      ]
@@ -51,14 +71,13 @@
     "# 解説 : 指定された文字列が正規表現にマッチするか調べる\n",
     "# 引数 : pattern=正規表現の文字列を指定, string=確認対象の文字列, flags=正規表現コンパイル時の振る舞いを変更するフラグを指定\n",
     "# 戻り値 : マッチした場合はマッチオブジェクト、しなかった場合はNoneを返す\n",
-    "print(re.search(\"a.c\", \"adc\"))\n",
     "print(re.search(\"a.c\", \"asdfabc\"))\n",
     "print(re.search(\"a.c\", \"add\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -77,13 +96,13 @@
     "# re.match(pattern, string, flags=0)\n",
     "# 文字列の先頭にマッチするかどうかを判定\n",
     "print(re.match(\"a.c\", \"abc\"))\n",
-    "print(re.match(\"a.c\", \"asdfabc\"))\n",
+    "print(re.match(\"a.c\", \"fabc\"))\n",
     "print(re.match(\"a.c\", \"abb\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -99,14 +118,14 @@
    ],
    "source": [
     "# reモジュールのflag\n",
-    "# A(ASCII)=\\wなどのマッチング処理でASCII文字のみを使用する **\\w=文字と数字それにアンダースコア のいずれかにマッチ\n",
+    "# A(ASCII)=\\wなどのマッチング処理でASCII文字のみを使用する (\\w=文字と数字それにアンダースコア のいずれかにマッチ)\n",
     "print(re.search(\"\\w\", \"あいうえおABC\"))\n",
     "print(re.search(\"\\w\", \"あいうえおABC\", flags=re.A))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -128,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -148,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -170,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -185,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -203,7 +222,7 @@
        "_sre.SRE_Pattern"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -231,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -257,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -283,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -309,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -337,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -363,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -389,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -416,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -430,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -458,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -482,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -504,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -526,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -548,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -571,6 +590,203 @@
     "print(match.group(0, 1, 2))\n",
     "print(match2.group(0, 1, 2))\n",
     "print(match.expand(r\"\\1 \\2\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#################################################\n",
+    "# 特殊文字のマッチング\n",
+    "#################################################\n",
+    "import re\n",
+    "import string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "108\n",
+      "0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ!\"#$%&'()*+,-./:;<=>?@[\\]^_`{|}~ \t\n",
+      "\r",
+      "\u000b",
+      "\f",
+      "あいうえお一二三\n"
+     ]
+    }
+   ],
+   "source": [
+    "printable = string.printable + \"あいうえお一二三\"\n",
+    "print(len(printable))\n",
+    "print(printable)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['0', '1', '2', '3', '4', '5', '6', '7', '8', '9']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(re.findall(r\"\\d\", printable))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z', 'A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'J', 'K', 'L', 'M', 'N', 'O', 'P', 'Q', 'R', 'S', 'T', 'U', 'V', 'W', 'X', 'Y', 'Z', '!', '\"', '#', '$', '%', '&', \"'\", '(', ')', '*', '+', ',', '-', '.', '/', ':', ';', '<', '=', '>', '?', '@', '[', '\\\\', ']', '^', '_', '`', '{', '|', '}', '~', ' ', '\\t', '\\n', '\\r', '\\x0b', '\\x0c', 'あ', 'い', 'う', 'え', 'お', '一', '二', '三']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(re.findall(r\"\\D\", printable))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', 'a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z', 'A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'J', 'K', 'L', 'M', 'N', 'O', 'P', 'Q', 'R', 'S', 'T', 'U', 'V', 'W', 'X', 'Y', 'Z', '_', 'あ', 'い', 'う', 'え', 'お', '一', '二', '三']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(re.findall(r\"\\w\", printable))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['!', '\"', '#', '$', '%', '&', \"'\", '(', ')', '*', '+', ',', '-', '.', '/', ':', ';', '<', '=', '>', '?', '@', '[', '\\\\', ']', '^', '`', '{', '|', '}', '~', ' ', '\\t', '\\n', '\\r', '\\x0b', '\\x0c']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(re.findall(r\"\\W\", printable))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[' ', '\\t', '\\n', '\\r', '\\x0b', '\\x0c']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(re.findall(r\"\\s\", printable))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', 'a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z', 'A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'J', 'K', 'L', 'M', 'N', 'O', 'P', 'Q', 'R', 'S', 'T', 'U', 'V', 'W', 'X', 'Y', 'Z', '!', '\"', '#', '$', '%', '&', \"'\", '(', ')', '*', '+', ',', '-', '.', '/', ':', ';', '<', '=', '>', '?', '@', '[', '\\\\', ']', '^', '_', '`', '{', '|', '}', '~', 'あ', 'い', 'う', 'え', 'お', '一', '二', '三']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(re.findall(r\"\\S\", printable))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ham1', 'ham2', 'ham3', 'ham4', 'ham5']\n",
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 先頭に単語の区切り文字がある単語を抽出\n",
+    "print(re.findall(r\"\\bham\\d\", \"spam ham1 egg,ham2.ham3\\nham4\\tham5_ham6\"))\n",
+    "print(re.findall(r\"\\bam\", \"spam ham egg\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['am', 'am']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 先頭に単語の区切り文字がない単語を抽出\n",
+    "print(re.findall(r\"\\Bam\", \"spam ham egg\"))"
    ]
   },
   {
@@ -599,7 +815,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.5.1+"
   }
  },
  "nbformat": 4,
