--- a/006_collections.ipynb
+++ b/006_collections.ipynb
@@ -13,6 +13,94 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#########################################################\n",
+    "# 存在しないキーに対して指定された値を返す(collections.defaultdict())\n",
+    "#########################################################"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "defaultdict(<class 'int'>, {'Hydrogen': 1, 'Lead': 0})\n"
+     ]
+    }
+   ],
+   "source": [
+    "# collections.defaultdict(object)\n",
+    "# text : 存在しないキーで辞書を引いた時に、指定した関数を呼び出し、その戻り値を返す。そしてその値を辞書に登録する\n",
+    "# param : object - 存在しないキーで辞書を引いいた時に呼び出される関数\n",
+    "# return : defaultdictオブジェクト\n",
+    "import collections\n",
+    "periodic_table = collections.defaultdict(int) # 存在しないキーを呼び出すとint()が呼び出され、0を返す\n",
+    "periodic_table[\"Hydrogen\"] = 1\n",
+    "print(periodic_table[\"Lead\"])\n",
+    "print(periodic_table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Abominable Snowman\n",
+      "Hun?\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 呼び出される関数は自分で定義することも可能\n",
+    "def no_idea():\n",
+    "    return \"Hun?\"\n",
+    "bestiary = collections.defaultdict(no_idea)\n",
+    "bestiary[\"A\"] = \"Abominable Snowman\"\n",
+    "print(bestiary[\"A\"])\n",
+    "print(bestiary[\"B\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hun?\n"
+     ]
+    }
+   ],
+   "source": [
+    "# lambdaを使うことも可能\n",
+    "bastiary = collections.defaultdict(lambda: \"Hun?\")\n",
+    "print(bestiary[\"E\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {
     "collapsed": true
@@ -654,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -663,6 +751,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "<class '__main__.subclass_name'>\n",
       "subclass_name(x=100, y=50, z=200)\n"
      ]
     }
@@ -675,6 +764,7 @@
     "# return : namedtupleオブジェクト\n",
     "Coordinate = collections.namedtuple(typename=\"subclass_name\", field_names=\"x, y, z\")\n",
     "c = Coordinate(100, 50, 200)\n",
+    "print(type(c))\n",
     "print(c)"
    ]
   },
@@ -703,12 +793,33 @@
    "source": [
     "NewTupleClass = collections.namedtuple(\"subclass_name\", [\"x\", \"y\", \"z\"])\n",
     "c2 = NewTupleClass(100, 200, 300)\n",
-    "print(type(c2))\n",
-    "print(c2)\n",
     "print(c2.x)\n",
     "print(c2[1], end=\"\\n\\n\")\n",
     "for i in c2:\n",
     "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "subclass_name(x=100, y=200, z=300)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 辞書から作る\n",
+    "a = collections.namedtuple(\"subclass_name\", \"x y z\")\n",
+    "d = dict(x=100, y=200, z=300)\n",
+    "ntuple = a(**d)\n",
+    "print(ntuple)"
    ]
   },
   {
@@ -966,6 +1077,144 @@
     "print(deq)\n",
     "deq.rotate(-2)\n",
     "print(deq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "######################################\n",
+    "# 特別な目的を持つイテレータ関数(itertools)\n",
+    "######################################\n",
+    "import itertools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "hello\n",
+      "s\n",
+      "p\n",
+      "a\n",
+      "m\n"
+     ]
+    }
+   ],
+   "source": [
+    "# itertools.chain(*seq)\n",
+    "# text : 一度に複数のシーケンスを引数に取り、引数全体がひとつのiterableであるかのうように扱う。\n",
+    "# param : *seq - 複数のシーケンス\n",
+    "# return : イテレータオブジェクト\n",
+    "for i in itertools.chain([1,2], (3,4), {\"hello\":\"world\"}, \"spam\"):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "1\n",
+      "2\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-20-3e8c4414f8d0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mitertools\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcycle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "# itertools.cycle(seq)\n",
+    "# text : 引数から、循環的に要素を返す\n",
+    "# param : seq - シーケンス\n",
+    "# return : イテレータオブジェクト\n",
+    "import time\n",
+    "for i in itertools.cycle([1,2]):\n",
+    "    print(i)\n",
+    "    time.sleep(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "6\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# itertools.accumulate(seq, func)\n",
+    "# text : 要素を一つにまとめた値を計算する。デフォルトでは和を計算する\n",
+    "# param : seq - シーケンス, func - 要素の計算に使う関数\n",
+    "# return : イテレータオブジェクト\n",
+    "for i in itertools.accumulate([1,2,3,4]):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "6\n",
+      "24\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 関数を自分で定義することもできる\n",
+    "# 関数は2この引数を受け付け、1この戻り値を返すものでなければならない\n",
+    "for i in itertools.accumulate([1,2,3,4], lambda a, b: a*b):\n",
+    "    print(i)"
    ]
   },
   {
