--- a/0012_binary.ipynb
+++ b/0012_binary.ipynb
@@ -139,7 +139,7 @@
     "# struct.unpack(書式指定, binary_data)\n",
     "# バイナリデータを指定された書式指定にしたがって変換する\n",
     "# param : 書式指定 - 後述, binary_data - bytes型のデータ\n",
-    "# return : int\n",
+    "# return : tuple\n",
     "import struct\n",
     "data = b\"\\x00\\x00\\x00\\x9a\\x00\\x00\\x00\\x8d\"\n",
     "width, height = struct.unpack(\">LL\", data)\n",
@@ -280,7 +280,7 @@
     "# a & b : aとb両方にセットされているビットを返す(AND)\n",
     "# a | b : aとbどちらかにセットされているビットを返す(OR)\n",
     "# a ^ b : aとbどちらかひとつだけにのみセットされているビットを返す(XOR)\n",
-    "# ~a : ビット反転\n",
+    "# ~a : ビット反転(符号が反転する)\n",
     "# a << num : 左にnumビットシフト(1ビット左にシフトは、掛ける2と同じ)\n",
     "# a >> num : 右にnumビットシフト(1ビット右にシフトは、小数点なしの割り算と同じ)\n",
     "print(\"5 = {}\\n1 = {}\".format(bin(5), bin(1)), end=\"\\n\\n\")\n",
@@ -293,35 +293,6 @@
     "print(a << 1, bin(a << 1))\n",
     "print(a >> 1, bin(a >> 1))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
